-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
according to the logs this is because name lookup made by LFSCK returns an error generated by OI scrubber. i.e. in some sense LFSCK and OI scrubber collide..
I think lookup should initiate OI scrubber and give it a hint for FID->dnode mapping, but shouldn't return an error if direntry exists.
- is related to
-
LU-10922 sanity-lfsck test_23b: (9) Fail to repair dangling name entry: 0
-
- Reopened
-